monitoring/prometheus-stack/http-routes/alertmanager-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: prometheus-stack
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Monitoring
    gethomepage.dev/name: Alertmanager
    gethomepage.dev/icon: https://www.citypng.com/public/uploads/preview/red-notification-bell-icon-transparent-background-735811696934490dcjzqim6lp.png
    gethomepage.dev/href: https://alertmanager.tamhomelab.com
    gethomepage.dev/description: "Alerting Management & Handling"
    gethomepage.dev/pod-selector: ""
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: gateway
  hostnames:
    - alertmanager.tamhomelab.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: kube-prometheus-stack-alertmanager
          port: 9093
          weight: 1
