monitoring/prometheus-stack/http-routes/grafana-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Observability
    gethomepage.dev/name: Grafana
    gethomepage.dev/icon: https://raw.githubusercontent.com/grafana/grafana/main/public/img/grafana_icon.svg
    gethomepage.dev/href: https://grafana.tamhomelab.com
    gethomepage.dev/description: "Data Visualization & Monitoring"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=grafana"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: gateway
  hostnames:
    - grafana.tamhomelab.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: kube-prometheus-stack-grafana
          port: 80
          weight: 1
