monitoring/prometheus-stack/http-routes/prometheus-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Monitoring
    gethomepage.dev/name: Prometheus
    gethomepage.dev/icon: https://raw.githubusercontent.com/prometheus/prometheus/main/documentation/images/prometheus-logo.svg
    gethomepage.dev/href: https://prometheus.tamhomelab.com
    gethomepage.dev/description: "Metrics Scraper"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=prometheus"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: gateway
  hostnames:
    - prometheus.tamhomelab.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: kube-prometheus-stack-prometheus
          port: 9090
          weight: 1
